--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
 header,figure{
   text-align: center;
 }
+nav a {
+   padding: 10px;
+   background-color: lightgray;
+}
+
 
 #featured-property p {
   text-align: center;
