--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header,figure{
+  text-align: center;
+}
+nav a {
+   padding: 10px;
+   background-color: lightgray;
+}
+
+
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#details div{
+  text-align: center;
+  background-color: red;
+  width: 25%;
+  float: left;
+}
+
